--- a/FEND Nanodegree projects/exercises/core1_lesson14-11/main.css
+++ b/FEND Nanodegree projects/exercises/core1_lesson14-11/main.css
@@ -26,7 +26,8 @@ footer,
 section,
 article,
 div {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 ul {
@@ -57,8 +58,10 @@ ul {
  */
 
 .header {
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
+  -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
+          box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
   min-height: 56px;
+  -webkit-transition: min-height 0.3s;
   transition: min-height 0.3s;
 }
 
@@ -100,6 +103,7 @@ ul {
     margin-top: 0.6em;
   }
 }
+
 @media screen and (min-width: 450px) {
   .header__title {
     font-size: 3em;
@@ -131,7 +135,8 @@ ul {
 }
 
 .nav__item {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   display: inline-block;
   width: 24%;
   text-align: center;
@@ -155,8 +160,12 @@ ul {
   .nav {
     width: 300px;
     position: absolute;
-    transform: translate(-300px, 0);
+    -webkit-transform: translate(-300px, 0);
+            transform: translate(-300px, 0);
+    -webkit-transition: -webkit-transform 0.5s ease;
+    transition: -webkit-transform 0.5s ease;
     transition: transform 0.5s ease;
+    transition: transform 0.5s ease, -webkit-transform 0.5s ease;
     border-radius: 0 0 9px 0;
   }
 
@@ -175,7 +184,8 @@ ul {
 
 
   .nav.open__menu {
-    transform: translate(0, 0);
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
     z-index: 999;
     background: #fff;
   }
@@ -188,7 +198,8 @@ ul {
  */
 
 main {
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
+  -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
+          box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
   width: 100%;
   margin-left: auto;
   margin-right: auto;
@@ -201,8 +212,11 @@ main {
  */
 .content {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 /*
@@ -220,7 +234,8 @@ main {
 }
 
 .hero article {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   background-color: #000;
   background-color: rgba(0, 0, 0, 0.7);
   position: absolute;
@@ -438,19 +453,27 @@ main {
 @media screen and (min-width: 600px) {
   .top-news {
     width:60%;
-    order: 0;
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0;
   }
   .weather {
     width: 40%;
-    order: 1;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
   }
   .scores {
     width: 100%;
-    order: 5;
+    -webkit-box-ordinal-group: 6;
+        -ms-flex-order: 5;
+            order: 5;
   }
   .recent-news {
     width: 100%;
-    order: 3;
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
   }
 }
 /*
