--- a/02_FEND_Nanodegree-2018/exercises/core1_lesson14-11/main.css
+++ b/02_FEND_Nanodegree-2018/exercises/core1_lesson14-11/main.css
@@ -401,16 +401,8 @@ main {
 .weather__next__image {
   width: 100%;
 }
-@media screen and (max-width: 450px) {
-  .weather__today__temp {
-    font-size: 1.8em;
-  }
 
-  .weather__today__deg {
-    font-size: 1em;
-    display: inline;
-  }
-}
+
 @media screen and (max-width: 390px) {
   .weather__details {
     width: 100%;
@@ -448,32 +440,81 @@ main {
 .weather__today__deg {
     font-size: 2em;
 }
+.snippet__thumbnail {
+  display: none;
 }
+}
+@media screen and (max-width: 450px) {
+  .weather__today__temp {
+    font-size: 1.8em;
+  }
 
-@media screen and (min-width: 600px) {
+  .weather__today__deg {
+    font-size: 1em;
+    display: inline;
+  }
+}
+@media screen and (min-width: 510px) {
+  .content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .hero {
+    width: 50%;
+  }
   .top-news {
-    width:60%;
+    width:50%;
     -webkit-box-ordinal-group: 1;
         -ms-flex-order: 0;
             order: 0;
   }
+}
+@media screen and (min-width: 670px) {
+  .hero {
+    width: 60%;
+  }
+  .top-news {
+    width:40%;
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0;
+    }
   .weather {
     width: 40%;
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
             order: 1;
   }
-  .scores {
+  .weather__details, .weather__next{
+    display: block;
     width: 100%;
-    -webkit-box-ordinal-group: 6;
-        -ms-flex-order: 5;
-            order: 5;
+  }
+
+  .scores {
+    width: 60%;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
   }
   .recent-news {
     width: 100%;
     -webkit-box-ordinal-group: 4;
         -ms-flex-order: 3;
             order: 3;
+  }
+  img.snippet__thumbnail {
+    width: 200px;
+    margin-bottom: 5px;
+  }
+}
+@media screen and (min-width: 800px) {
+  #drawer, .header__inner, main {
+    display: block;
+    width: 800px;
+    margin: 0 auto;
   }
 }
 /*
