add class for unmatched cards

--- a/02_FEND_Nanodegree-2018/Project03 - Memory Game/css/app.css
+++ b/02_FEND_Nanodegree-2018/Project03 - Memory Game/css/app.css
@@ -80,6 +80,12 @@ h1 {
     background: #02ccba;
     font-size: 33px;
 }
+.deck .card.dismatch {
+    cursor: default;
+    background: #da884c;
+    font-size: 33px;
+}
+
 
 /*
  * Styles for the Score Panel
