add HTML for the modal

--- a/02_FEND_Nanodegree-2018/Project03 - Memory Game/css/app.css
+++ b/02_FEND_Nanodegree-2018/Project03 - Memory Game/css/app.css
@@ -97,14 +97,14 @@ h1 {
     margin-bottom: 10px;
 }
 
-.score-panel .stars {
+#modal .stars {
     margin: 0;
     padding: 0;
     display: inline-block;
     margin: 0 5px 0 0;
 }
 
-.score-panel .stars li {
+#modal .stars li {
     list-style: none;
     display: inline-block;
 }
