--- a/02_FEND_Nanodegree-2018/Project03 - Memory Game/css/app.css
+++ b/02_FEND_Nanodegree-2018/Project03 - Memory Game/css/app.css
@@ -88,7 +88,7 @@ h1 {
 
 
 /*
- * Styles for the Score Panel
+ * Styles for the Score Panel & Modal
  */
 
 .score-panel {
@@ -107,6 +107,117 @@ h1 {
 #modal .stars li {
     list-style: none;
     display: inline-block;
+}
+
+#modal {
+  display: none;
+  position: absolute;
+  z-index: 100;
+  background: #c2d76d;
+  -moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+  border-radius: 10px;
+  padding: 20px;
+  padding-top: 1px;
+  text-align: center;
+  -moz-box-shadow: 3px 4px 0px 0px #415539;
+	-webkit-box-shadow: 3px 4px 0px 0px #415539;
+	box-shadow: 3px 4px 0px 0px #415539;
+}
+.congrats {
+  color: #ab177d;
+  font-size: 45px;
+  margin-bottom: 0;
+}
+#modal .you-won {
+  margin-top: 0;
+  font-size: 30px;
+}
+
+/* Styling of the YES/NO buttons (tweaked, taken from: https://www.bestcssbuttongenerator.com) */
+
+/* NO button */
+
+.no-button {
+  margin: 5px;
+	-moz-box-shadow: 3px 4px 0px 0px #8a2a21;
+	-webkit-box-shadow: 3px 4px 0px 0px #8a2a21;
+	box-shadow: 3px 4px 0px 0px #8a2a21;
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #c62d1f), color-stop(1, #f24437));
+	background: -moz-linear-gradient(top, #c62d1f 5%, #f24437 100%);
+	background: -webkit-linear-gradient(top, #c62d1f 5%, #f24437 100%);
+	background: -o-linear-gradient(top, #c62d1f 5%, #f24437 100%);
+	background: -ms-linear-gradient(top, #c62d1f 5%, #f24437 100%);
+	background: linear-gradient(to bottom, #c62d1f 5%, #f24437 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#c62d1f', endColorstr='#f24437',GradientType=0);
+	background-color: #c62d1f;
+	-moz-border-radius: 18px;
+	-webkit-border-radius: 18px;
+	border-radius: 18px;
+	border:1px solid #d02718;
+	display: inline-block;
+	cursor: pointer;
+	color: #ffffff;
+	font-size: 20px;
+	padding: 7px 25px;
+	text-decoration:none;
+  font-weight: bold;
+	text-shadow:0px 1px 0px #810e05;
+}
+.no-button:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f24437), color-stop(1, #c62d1f));
+	background:-moz-linear-gradient(top, #f24437 5%, #c62d1f 100%);
+	background:-webkit-linear-gradient(top, #f24437 5%, #c62d1f 100%);
+	background:-o-linear-gradient(top, #f24437 5%, #c62d1f 100%);
+	background:-ms-linear-gradient(top, #f24437 5%, #c62d1f 100%);
+	background:linear-gradient(to bottom, #f24437 5%, #c62d1f 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f24437', endColorstr='#c62d1f',GradientType=0);
+	background-color:#f24437;
+  font-size: 22px;
+}
+
+/* YES button */
+
+.yes-button {
+  margin: 5px;
+	-moz-box-shadow: 3px 4px 0px 0px #3e7327;
+	-webkit-box-shadow: 3px 4px 0px 0px #3e7327;
+	box-shadow: 3px 4px 0px 0px #3e7327;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #77b55a), color-stop(1, #66a647));
+	background:-moz-linear-gradient(top, #77b55a 5%, #66a647 100%);
+	background:-webkit-linear-gradient(top, #77b55a 5%, #66a647 100%);
+	background:-o-linear-gradient(top, #77b55a 5%, #66a647 100%);
+	background:-ms-linear-gradient(top, #77b55a 5%, #66a647 100%);
+	background:linear-gradient(to bottom, #77b55a 5%, #66a647 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#77b55a', endColorstr='#66a647',GradientType=0);
+	background-color:#77b55a;
+	-moz-border-radius:18px;
+	-webkit-border-radius:18px;
+	border-radius:18px;
+	border:1px solid #4b8f29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-size:20px;
+	padding:7px 25px;
+	text-decoration:none;
+  font-weight: bold;
+	text-shadow:0px 1px 0px #5b8a3c;
+}
+.yes-button:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #72b352), color-stop(1, #77b55a));
+	background:-moz-linear-gradient(top, #72b352 5%, #77b55a 100%);
+	background:-webkit-linear-gradient(top, #72b352 5%, #77b55a 100%);
+	background:-o-linear-gradient(top, #72b352 5%, #77b55a 100%);
+	background:-ms-linear-gradient(top, #72b352 5%, #77b55a 100%);
+	background:linear-gradient(to bottom, #72b352 5%, #77b55a 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#72b352', endColorstr='#77b55a',GradientType=0);
+	background-color:#72b352;
+  font-size: 22px;
+}
+
+.play-again-buttons {
+  font-weight: bold;
 }
 
 .score-panel .restart {
