add star ranking functionality

--- a/02_FEND_Nanodegree-2018/Project03 - Memory Game/css/app.css
+++ b/02_FEND_Nanodegree-2018/Project03 - Memory Game/css/app.css
@@ -97,14 +97,16 @@ h1 {
     margin-bottom: 10px;
 }
 
-#modal .stars {
+#modal .stars,
+.score-panel .stars {
     margin: 0;
     padding: 0;
     display: inline-block;
     margin: 0 5px 0 0;
 }
 
-#modal .stars li {
+#modal .stars li,
+.score-panel .stars li {
     list-style: none;
     display: inline-block;
 }
