add transitions for dismatched cards

--- a/02_FEND_Nanodegree-2018/Project03 - Memory Game/css/app.css
+++ b/02_FEND_Nanodegree-2018/Project03 - Memory Game/css/app.css
@@ -63,12 +63,17 @@ h1 {
     justify-content: center;
     align-items: center;
     box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
+    transform: rotateY(180deg);
+    transition: transform 0.5s;
 }
 
 .deck .card.open {
     transform: rotateY(0);
     background: #02b3e4;
     cursor: default;
+    transition: transform 0.5s;
+    transform-style: preserve-3d;
+
 }
 
 .deck .card.show {
@@ -84,6 +89,7 @@ h1 {
     cursor: default;
     background: #da884c;
     font-size: 33px;
+    transform: rotate(20deg);
 }
 
 
