change colour of the back of the card and remove not needed png background

--- a/02_FEND_Nanodegree-2018/Project03 - Memory Game/css/app.css
+++ b/02_FEND_Nanodegree-2018/Project03 - Memory Game/css/app.css
@@ -58,7 +58,7 @@ body {
 .deck .card {
     height: 125px;
     width: 125px;
-    background: #2e3d49;
+    background: #3f2768;
     font-size: 0;
     color: #ffffff;
     border-radius: 8px;
