add box displaying score and styling of it

--- a/02_FEND_Nanodegree-2018/Project04 - Arcade Game clone/css/style.css
+++ b/02_FEND_Nanodegree-2018/Project04 - Arcade Game clone/css/style.css
@@ -1,3 +1,9 @@
 body {
     text-align: center;
 }
+.score-box {
+  font-family: monospace;
+  font-size: 20px;
+  margin-top: 20px;
+  margin-bottom: -20px;
+}
