--- a/02_FEND_Nanodegree-2018/exercises/core4_cat-clicker/css/app.css
+++ b/02_FEND_Nanodegree-2018/exercises/core4_cat-clicker/css/app.css
@@ -1,5 +1,28 @@
-#cat-picture img {
-  width: 320px;
+
+* {
+  box-sizing: border-box;
+}
+
+header, footer {
+  width: 100%;
+  padding: 30px;
+  margin: 5px 0;
+
+}
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  align-content: center;
+  justify-content: flex-start;
+}
+.section {
+  width: 50%;
+  padding: 15px;
+}
+
+.cat-picture img {
+  width: 80%;
 }
 
 .change-opacity {
