cat clicker with 5 cat's specification(not working)

--- a/02_FEND_Nanodegree-2018/exercises/core4_cat-clicker/css/app.css
+++ b/02_FEND_Nanodegree-2018/exercises/core4_cat-clicker/css/app.css
@@ -17,12 +17,12 @@ header, footer {
   justify-content: flex-start;
 }
 .section {
-  width: 50%;
+  width: 60%;
   padding: 15px;
 }
 
-.cat-picture img {
-  width: 80%;
+.list {
+  width: 30%;
 }
 
 .change-opacity {
